--- a/index.html
+++ b/index.html
@@ -5,3 +5,14 @@
         <p> Paragraph Test</p> "this is paragraph test"
     </body>
 </html>
+
+
+#once the coding is finished
+#open Terminal BASH
+#type in:
+# git add . (with the period)
+#hit ENTER then type:
+# git commit -m "index" - this saves changes
+#then:
+# git push
+#login and finish
